# StockVibePredictor

./: .gitconfig  .gitignore  AUTHORS.md  README.md  dump.rdb  pyproject.toml
.github/: CODEOWNERS
Backend/: TrainModel.py  manage.py  package-lock.json  requirements.txt  setup.py
Backend/Apps/StockPredict/: CheckPath.py  apps.py  enhanced_views.py  urls.py  views.py
Backend/Scripts/: TrainModel.py  UniversalTrainModel.py  run_training.py
Backend/Scripts/Performance/: AAPL_1mo_performance.json  AMC_1w_performance.json  AMZN_1mo_performance.json  ARKK_1w_performance.json  AXP_1w_performance.json  BRK_A_1mo_performance.json  BRK_B_1mo_performance.json  DKNG_1w_performance.json  DOCU_1w_performance.json  GME_1w_performance.json  GOOGL_1mo_performance.json  GOOG_1mo_performance.json  IWM_1w_performance.json  JNJ_1mo_performance.json  JPM_1mo_performance.json  META_1mo_performance.json  MSFT_1mo_performance.json  NVDA_1mo_performance.json  PG_1mo_performance.json  PLTR_1mo_performance.json  PYPL_1w_performance.json  QQQ_1w_performance.json  RBLX_1mo_performance.json  ROKU_1w_performance.json  SNOW_1w_performance.json  SPY_1w_performance.json  TSLA_1mo_performance.json  UNH_1mo_performance.json  VTI_1w_performance.json  V_1mo_performance.json  WMT_1mo_performance.json  ZM_1w_performance.json  training_summary_20250811_154830.json
Backend/StockVibePredictor/: settings.py  urls.py  wsgi.py
Docs/: API-Endpoints.txt
Frontend/: craco.config.js  package-lock.json  package.json  test_connection.py  webpack.config.js
Frontend/Apps/Dashboard/: package.json
Frontend/Src/: App.css  App.js  index.js
Frontend/Src/Components/: CompanyEssentials.css  CompanyEssentials.js  LoadingSpinner.js  PredictionResult.css  PredictionResult.js  StockChart.css  StockChart.js  StockInput.css  StockInput.js
Frontend/Src/Data/: stockDatabase.js
Frontend/Src/Database/: StockDatabase.js
Frontend/Src/dashboard/: package-lock.json  package.json
Frontend/Src/dashboard/public/: index.html
Frontend/Src/dashboard/src/: App.css  App.js
Frontend/Src/dashboard/src/TempFolder/: PredictionResult.js  StockChart.js
Frontend/Src/dashboard/src/components/: LoadingSpinner.css  PredictionResult.js  Sample.py  StockChart.css  StockChart.js  StockInput.css
StockVibePredictor/: README.md
StockVibePredictor/Backend/: manage.py  requirements.txt
StockVibePredictor/Backend/StockVibePredictor/: asgi.py
StockVibePredictor/Frontend/Docs/: FolderStructure.txt
Tests/: App.test.js  TestConnections.py  TestModel.py
