[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StockVibePredictor"
version = "1.0.0"
description = "AI-powered stock market prediction system with Django backend and React frontend"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Dibakar"},
]
maintainers = [
    {name = "Dibakar"},
]
keywords = [
    "stock-market",
    "prediction",
    "machine-learning",
    "django",
    "react",
    "finance",
    "trading",
    "ai",
    "yfinance",
    "technical-analysis"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: JavaScript",
    "Framework :: Django :: 5.0",
    "Framework :: React",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.0.0",
    "django-redis>=5.2.0",
    "redis>=4.5.0",
    "celery>=5.2.0",
    "yfinance>=0.2.18",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.2.0",
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pytz>=2023.3",
]

[project.urls]
Homepage = "https://github.com/ThisIsDibakar/StockVibePredictor"
Documentation = "https://github.com/ThisIsDibakar/StockVibePredictor/wiki"
Repository = "https://github.com/ThisIsDibakar/StockVibePredictor.git"
"Bug Tracker" = "https://github.com/ThisIsDibakar/StockVibePredictor/issues"
"Source Code" = "https://github.com/ThisIsDibakar/StockVibePredictor"
Changelog = "https://github.com/ThisIsDibakar/StockVibePredictor/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "coverage>=7.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pre-commit>=3.0.0",
]
production = [
    "gunicorn>=20.1.0",
    "whitenoise>=6.4.0",
    "psycopg2-binary>=2.9.0",
    "dj-database-url>=2.0.0",
    "boto3>=1.26.0",
    "sentry-sdk>=1.0.0",
]
ml-extra = [
    "tensorflow>=2.13.0",
    "xgboost>=1.7.0",
    "lightgbm>=4.0.0",
    "ta-lib>=0.4.0",
    "statsmodels>=0.14.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.scripts]
stockvibe = "Backend.manage:main"
stockvibe-train = "Backend.Scripts.TrainModel:main"
stockvibe-runserver = "Backend.manage:runserver"
stockvibe-migrate = "Backend.manage:migrate"
stockvibe-test = "Backend.manage:test"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["Backend"]
include = ["Apps*", "Backend*", "Scripts*"]
exclude = ["tests*", "docs*", "Frontend*"]

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.md",
    "*.yml",
    "*.yaml",
    "*.json",
    "*.pkl",
    "*.joblib",
    "*.h5",
    "*.csv",
    "templates/*.html",
    "static/**/*",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | Frontend
  | node_modules
  | venv
  | env
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_django = ["django", "rest_framework"]
known_first_party = ["Apps", "Backend", "Scripts"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip_glob = ["*/migrations/*", "*/venv/*", "*/node_modules/*", "Frontend/*"]
skip = ["Frontend"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Backend.Backend.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["Backend/tests", "Backend/Apps"]
addopts = """
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --no-migrations
    --reuse-db
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["Backend"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/test_*.py",
    "*/venv/*",
    "*/env/*",
    "*/__pycache__/*",
    "*/settings/*",
    "Backend/manage.py",
    "Backend/Backend/wsgi.py",
    "Backend/Backend/asgi.py",
    "Frontend/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "Frontend/",
    "migrations/",
    "venv/",
    "env/",
]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]

[tool.mypy.plugins.django-stubs]
django_settings_module = "Backend.Backend.settings"

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    "env",
    ".venv",
    "Frontend",
    "node_modules",
]
ignore = ["E203", "W503", "E501"]
per-file-ignores = [
    "__init__.py:F401",
    "settings.py:E501",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env", "Frontend"]
skips = ["B101", "B601"]

[tool.pylint]
max-line-length = 88
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0622",  # redefined-builtin
    "E1101",  # no-member
]
ignore = ["migrations", "venv", "env", "Frontend"]

[metadata]
name = "StockVibePredictor"
author = "Dibakar"
author-email = "your-email@example.com"
home-page = "https://github.com/ThisIsDibakar/StockVibePredictor"
license = "MIT"
license_files = ["LICENSE"]
platform = ["any"]
project_urls = {
    "Bug Tracker" = "https://github.com/ThisIsDibakar/StockVibePredictor/issues"
    "Documentation" = "https://github.com/ThisIsDibakar/StockVibePredictor/wiki"
    "Source Code" = "https://github.com/ThisIsDibakar/StockVibePredictor"
}

# Custom metadata for the project
[tool.stockvibe]
project_name = "StockVibePredictor"
author = "Dibakar"
created_date = "2025-08-11"
version = "1.0.0"
copyright = "Copyright (c) 2025 Dibakar. All rights reserved."
technologies = [
    "Django",
    "React",
    "Next.js",
    "scikit-learn",
    "yfinance",
    "Redis",
    "PostgreSQL"
]
